# token-purchaser-cw

./: Cargo.toml  NOTICE  README.md
.github/workflows/: Basic.yml
artifacts/: checksums.txt  collector.wasm  manager.wasm  token_purchaser_cw.wasm
contracts/collector/: Cargo.toml
contracts/collector/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/manager/: Cargo.toml
contracts/manager/src/: contract.rs  msg.rs  state.rs
scripts/: release_build.sh
src/: contract.rs  msg.rs
