[workspace]
resolver = "2"
members = [
    "contracts/collector",
    "contracts/manager",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "2.2.1"
cosmwasm-std = "2.2.1"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
ethabi = "18.0.0"
getrandom = { version = "0.2.15", features = ["custom"] }
schemars = "0.8.21"
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.69" }
cw-multi-test = "2.3.1"

